Login e Cadastro Funcionando

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
     <activity
-        android:name=".SplashActivity"
+        android:name=".splash.SplashActivity"
         android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -26,10 +26,11 @@
       </intent-filter>
     </activity>
     <activity
-        android:name=".LoginActivity"
+        android:name=".login.LoginActivity"
         android:theme="@style/AppTheme.NoActionBar">
     </activity>
-    <activity android:name=".CadastroActivity">
+    <activity android:name=".cadastro.CadastroActivity"
+              android:theme="@style/AppTheme.NoActionBar">
     </activity>
     <activity
         android:name=".MainsActiity"
