--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,15 @@
   <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
-      android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
-      android:label="@string/app_name"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:supportsRtl="true"
-      android:theme="@style/AppTheme">
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme">
     <activity
-        android:name=".splash.SplashActivity"
-        android:theme="@style/AppTheme.NoActionBar">
+      android:name=".splash.SplashActivity"
+      android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -27,17 +27,22 @@
       </intent-filter>
     </activity>
     <activity
-        android:name=".login.LoginActivity"
-        android:theme="@style/AppTheme.NoActionBar">
+      android:name=".login.LoginActivity"
+      android:theme="@style/AppTheme.NoActionBar">
     </activity>
     <activity
-        android:name=".cadastro.CadastroActivity"
-        android:theme="@style/AppTheme.NoActionBar">
+      android:name=".cadastro.CadastroActivity"
+      android:theme="@style/AppTheme.NoActionBar">
     </activity>
     <activity
-        android:name=".MainsActiity"
-        android:label="@string/title_activity_main"
-        android:theme="@style/AppTheme.NoActionBar">
+      android:name=".olds.MainsActiity"
+      android:label="@string/title_activity_main"
+      android:theme="@style/AppTheme.NoActionBar">
+    </activity>
+    <activity
+      android:name=".main.PrincipalActivity"
+      android:label="@string/title_activity_main"
+      android:theme="@style/AppTheme.NoActionBar">
     </activity>
     <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -48,12 +53,15 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
     <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="@string/google_maps_key"/>
+      android:name="com.google.android.geo.API_KEY"
+      android:value="@string/google_maps_key"/>
 
-   <activity
-        android:name=".MapsExemploActivity"
-        android:label="@string/title_activity_maps_exemplo">
+    <activity
+      android:name=".olds.MapsExemploActivity"
+      android:label="@string/title_activity_maps_exemplo">
+    </activity>
+    <activity android:name=".infoponto.InfoParadaActivity"
+      android:parentActivityName=".main.PrincipalActivity">
     </activity>
   </application>
 
